# gdatabus

./: .gitmodules  CMakeLists.txt  README.md
loader/: README.md  configuration.h  ignore.proto  loader.h  loader.hh  loader_def.h  loader_item.h
test/: generator_main.cpp  loader_main.cpp  main.cpp
test/shared/data/GALOIS/: README.md
test/shared/data/GALOIS/snapshot/: snapshot_GALOIS_DATA_0.description.202002092030  snapshot_GALOIS_DATA_0_user.data.202002092030
